<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.SettingsActivity">

    <LinearLayout
        android:id="@+id/data_saver_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/data_saver_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/data_saver_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data_saver_mode"
            android:textColor="@color/black"
            android:padding="16dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/enable_downloads_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/enable_downloads_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/enable_downloads_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enable_downloads"
            android:textColor="@color/black"
            android:padding="16dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/enable_downloads_data_saver_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:visibility="gone"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/enable_downloads_data_saver_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/enable_downloads_data_saver_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/download_in_data_saver_mode"
            android:textColor="@color/black"
            android:padding="16dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/download_path_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:visibility="gone"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:id="@+id/download_path_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/download_path"
            android:textColor="@color/black"
            android:padding="16dp"/>

        <TextView
            android:id="@+id/download_path"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bg"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:text="@string/no_path_set"
            android:padding="16dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/data_import_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:id="@+id/data_import_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/import_data"
            android:textColor="@color/black"
            android:padding="16dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/data_export_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:id="@+id/data_export_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/export_data"
            android:textColor="@color/black"
            android:padding="16dp"/>

    </LinearLayout>

</LinearLayout>